Unificado disenho de recuperar contrasenha, testeado

--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -6,12 +6,15 @@
 {% endblock %}
 
 {% block content %}
-
+ <br>
+    <h4>Sistema Gerenciador de Recursos PoliMbae </h4>
+    <br>
     <div id="page-content-wrapper">
           <h1 class="text-center">Su contraseña se reestableció correctamente</h1>
 
-
-	        <p class="text-center"><a  href="{% url 'login' %}">Iniciar sesión</a></p>
+    <hr>
+       <h4> <p class="text-center"><a href="{% url 'login' %}">Clic aqui para Iniciar sesión</a></p></h4>
+    <hr>
     </div>
 
 
