--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -10,14 +10,18 @@
 
     <form method="post">
         {% csrf_token %}
+        <hr>
 
         {{ form.new_password1.errors }}
-        <label for="id_new_password1">Nueva contraseña:</label>
+        <label class="control-label" for="id_new_password1">Nueva contraseña:  </label>
         {{ form.new_password1 }}
 
-        {{ form.new_password2.errors }}
-        <label for="id_new_password2">Confirme contraseña:</label>{{ form.new_password2 }}
-        <input type="submit" value="Cambiar mi contraseña" />
+        {{ form.new_password2.errors }} <br><br>
+        <label for="id_new_password2">Confirme contraseña:  </label>{{ form.new_password2 }}
+        <hr>
+        <br>
+        <br>
+        <input class="btn btn-primary" type="submit" value="Cambiar mi contraseña" />
     </form>
 
 {% else %}
