--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -17,9 +17,15 @@
       </div>
             <form method="post">
 	         {% csrf_token %}
+                <hr>
                 <div class="form-group">
 	                <label for="id_email">Correo:</label> {{ form.email }}
-	                <input type="submit" value="Enviar"/>
+	                <input class="btn btn-primary" type="submit" value="Enviar"/>
+
+                    <br>
+                    <hr>
+                    <a class= "btn btn-default" href="{% url 'login' %}">Cancelar</a>
+
                 </div>
             </form>
         </div>
