--- a/templates/reserva_new/lista_reserva.html
+++ b/templates/reserva_new/lista_reserva.html
@@ -3,6 +3,19 @@
 {% block content %}
 
     <h3 class="text-muted list-group">Lista de Reservas</h3>
+  <hr>
+    <label aria-describedby=""> <h5> Ingrese el "Nombre del Recurso" o la "Fecha de Reserva" para generar la busqueda</h5></label>
+
+
+{% if error %}
+        <p style="color: red;">Por favor introduzca un termino de busqueda.</p>
+ {% endif %}
+
+ <form action="/reservanew/listarbuscar/" method="get">
+        <input class="btn-warning" type="text" name="q">
+        <input class="btn-warning" type="submit" value="Buscar">
+    </form>
+    <p>Usted estaba buscando: <strong>{{ query }}</strong></p>
 
 <table class="table table-bordered">
 <thead>
