--- a/templates/recurso_pr/listar_tipo_recurso_pr.html
+++ b/templates/recurso_pr/listar_tipo_recurso_pr.html
@@ -3,23 +3,8 @@
 {% block content %}
 
     <h3 class="text-muted list-group">Lista de Tipo de Recurso</h3>
-<hr>
-<label aria-describedby=""> <h4> Ingrese el Nombre del Tipo de Recurso para generar la busqueda</h4></label>
 
-
-{% if error %}
-        <p style="color: red;">Por favor introduzca un termino de busqueda.</p>
- {% endif %}
-
- <form action="/recurso_pr/listartipobusqueda/" method="get">
-        <input class="btn-warning" type="text" name="q">
-        <input class="btn-warning" type="submit" value="Buscar">
-    </form>
-    <p>Usted estaba buscando: <strong>{{ query }}</strong></p>
-
-<hr>
-
-<table class="table table-bordered">
+<table class="table table-bordered" id="datatable">
 <thead>
 <tr>
     <td><b><i>ID Tipo Recurso</i></b></td>
@@ -47,18 +32,33 @@
 </tbody>
 </table>
 
-<ul class="pager">
-	<li>
-		{% if page_obj.has_previous %}
-       	 <a href="?page={{ page_obj.previous_page_number }}">Previous</a>
-		{% endif %}
-        </li>
-	<li>
-		{% if page_obj.has_next %}
-     	 <a href="?page={{ page_obj.next_page_number }}">Next</a>
-    	{% endif %}
-    </li>
-</ul>
 
 
 {% endblock%}
+{% block extrajs %}
+<!-- DataTables JavaScript -->
+    <script src="/static/vendor/datatables/js/jquery.dataTables.min.js"></script>
+    <script src="/static/vendor/datatables-plugins/dataTables.bootstrap.min.js"></script>
+    <script src="/static/vendor/datatables-responsive/dataTables.responsive.js"></script>
+    <script src="/static/vendor/datatables-buttons/buttons.bootstrap.min.js"></script>
+    <script src="/static/vendor/datatables-buttons/dataTables.buttons.min.js"></script>
+
+	<script src="/static/vendor/datatables-buttons/jszip.min.js"></script>
+	<script src="/static/vendor/datatables-buttons/pdfmake.min.js"></script>
+	<script src="/static/vendor/datatables-buttons/vfs_fonts.js"></script>
+	<script src="/static/vendor/datatables-buttons/buttons.html5.min.js"></script>
+	<script src="/static/vendor/datatables-buttons/buttons.print.min.js"></script>
+
+	<script src="/static/vendor/datatables-plugins/moment.min.js"></script>
+	<script src="/static/vendor/datatables-plugins/datetime-moment.js"></script>
+    <script>
+        $(document).ready(function() {
+            $('#datatable').DataTable({
+                responsive: true,
+                order: [0, "asc"],
+                dom:'frtip'
+
+            });
+        });
+    </script>
+{% endblock %}
