--- a/templates/reserva_new/eliminar_mi_reserva.html
+++ b/templates/reserva_new/eliminar_mi_reserva.html
@@ -1,5 +1,5 @@
 {% extends 'base/base.html' %}
-{% block title %}Confirmar Solicitud {% endblock %}
+{% block title %}Confirmar Eliminar {% endblock %}
 {% block content %}
 
 
@@ -7,19 +7,19 @@
 
 
 <!--  -->
-    <h3 class="text-muted list-group">Confirmar Solicitud </h3>
+    <h3 class="text-muted list-group">Confirma que desea cancelar esta Reserva?</h3>
 
     <div class="form-group">
         <label for="profile">Usuario</label>
-        <input class="form-control"  value="{{ solicitud.usuario.user.username}}" id="profile" name="profile" readonly="readonly"/>
+        <input class="form-control"  value="{{ reserva.usuario.user.username}}" id="profile" name="profile" readonly="readonly"/>
     </div>
     <div class="form-group">
         <label for="tipo">Tipo</label>
-        <input class="form-control"  value="{{ solicitud.recurso.tipo_id.nombre_recurso }}" id="tipo" readonly="readonly"/>
+        <input class="form-control"  value="{{ reserva.recurso_reservado.tipo_id.nombre_recurso }}" id="tipo" readonly="readonly"/>
     </div>
     <div class="form-group">
         <label for="recurso">Recurso</label>
-        <input class="form-control"  value="{{ solicitud.recurso.descripcion }}" id="recurso" readonly="readonly"/>
+        <input class="form-control"  value="{{ reserva.recurso_reservado.descripcion }}" id="recurso" readonly="readonly"/>
     </div>
      <div class="form-group">
         <label for="{{ form.fecha_reserva.Fecha }}">Fecha</label>
@@ -34,11 +34,11 @@
         {{ form.hora_fin }}
     </div>
 
-    </div>
+
 <div class="col-md-8 col-md-offset-4">
     <div class="form-group">
-        <button class="btn btn-primary" name="guardar" value="GUARDAR" type="submit">Confirmar</button>
-        <a class= "btn btn-default" href="{% url 'reserva_new:solicitud_listar' %}">Cancelar</a>
+        <button class="btn btn-danger" type="submit">Confirmar</button>
+        <a class= "btn btn-default" href="{% url 'reserva_new:listar_reservas_user' %}">Cancelar</a>
     </div>
 </div>
 
