--- a/templates/reserva_new/eliminar_mi_solicitud.html
+++ b/templates/reserva_new/eliminar_mi_solicitud.html
@@ -1,5 +1,5 @@
 {% extends 'base/base.html' %}
-{% block title %}Confirmar Solicitud {% endblock %}
+{% block title %}Rechazar Solicitud {% endblock %}
 {% block content %}
 
 
@@ -7,7 +7,7 @@
 
 
 <!--  -->
-    <h3 class="text-muted list-group">Confirmar Solicitud </h3>
+    <h3 class="text-muted list-group">Confirma que desea rechazar esta Solicitud ? </h3>
 
     <div class="form-group">
         <label for="profile">Usuario</label>
@@ -34,11 +34,11 @@
         {{ form.hora_fin }}
     </div>
 
-    </div>
+
 <div class="col-md-8 col-md-offset-4">
     <div class="form-group">
-        <button class="btn btn-primary" name="guardar" value="GUARDAR" type="submit">Confirmar</button>
-        <a class= "btn btn-default" href="{% url 'reserva_new:solicitud_listar' %}">Cancelar</a>
+        <button class="btn btn-danger" type="submit">Confirmar</button>
+        <a class= "btn btn-default" href="{% url 'reserva_new:listar_reservas_user' %}">Cancelar</a>
     </div>
 </div>
 
