modificado mantenimiento y recurso

--- a/templates/recurso_pr/modificar_tipo_recurso_pr.html
+++ b/templates/recurso_pr/modificar_tipo_recurso_pr.html
@@ -14,6 +14,11 @@
         <div class="col-md-4"> {{ form.reservable }}
         </div>
     </div>
+     <div class="form-group">
+        <label class="col-md-4 control-label ">Frecuencia de mantenimiento</label>
+        <div class="col-md-4"> {{ form.frecuencia }}
+        </div>
+    </div>
     <hr>
      <div class="form-group">
         <label class="col-md-6 control-label" for="singlebutton"></label>
