--- a/templates/recurso_pr/crear_tipo_recurso_pr.html
+++ b/templates/recurso_pr/crear_tipo_recurso_pr.html
@@ -15,6 +15,10 @@
             <label for="tipo_id">Caracteristica</label>
                 {{ form.caracteristica}}
         </div>
+         <div class="form-group ">
+            <label for="nombre">Frecuencia de mantenimiento</label>
+            {{ form.frecuencia}}
+        </div>
         <div class="form-group">
             <button class="btn btn-primary" formnovalidate name="crear" value="Listar recursos" type="submit">Agregar Caracteristica</button>
         </div>
